--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@
                                                 </li>
                                             </ul>
                                         </div>
-                                        <h5>Development, Graphic</h5>
-                                        <p>11th april 2020</p>
+                                        <h5>Coming soon</h5>
+                                        <p>...</p>
                                     </div>
                                 </div>
                             </a>
@@ -316,8 +316,8 @@
                                                 </li>
                                             </ul>
                                         </div>
-                                        <h5>Design, Graphic</h5>
-                                        <p>11th april 2020</p>
+                                        <h5>Coming Soon</h5>
+                                        <p>...</p>
                                     </div>
                                 </div>
                             </a>
@@ -339,8 +339,8 @@
                                                 </li>
                                             </ul>
                                         </div>
-                                        <h5>Mobile Apps, Development</h5>
-                                        <p>11th april 2020</p>
+                                        <h5>Coming Soon</h5>
+                                        <p>...</p>
                                     </div>
                                 </div>
                             </a>
