index html, changed to English

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <section class="home" id="home">
             <div class="titles">
                 <div class="titles-wrap">
-                    <h1>Soy <span>Agustin</span></h1>
+                    <h1>I'm <span>Agustin</span></h1>
                     <h2><span class="txt-rotate"></span></h2>
-                    <p>Esta es mi pagina, donde hay informacion sobre mi ademas de ser un portafolio que contiene varios de mis proyectos de diseño web.</p>
-                    <div class="contacto">
+                    <p>And this is my web page, here you can find information about me and you can also take a look at some projects i've made with more incoming.</p>
+                    <div class="contact">
                         <div>
                             <a href="https://api.whatsapp.com/send/?phone=2252488432" class="btn" target="_blank">Whatsapp</a>
                         </div>
@@ -33,7 +33,7 @@
                 <div class="row">
                     <div class="col-lg-10">
                         <div class="sec-title">
-                            <h2>Conocimientos</h2>
+                            <h2>Knowledge</h2>
                         </div>
                     </div>
                 </div>
@@ -201,7 +201,7 @@
                 <div class="row">
                     <div class="col-lg-10">
                         <div class="sec-title">
-                            <h2>Mis Trabajos</h2>
+                            <h2>My Projects</h2>
                         </div>
                     </div>
                 </div>
@@ -224,8 +224,8 @@
                                                 </li>
                                             </ul>
                                         </div>
-                                        <h5>Mi Primer Pagina</h5>
-                                        <p>una pagina basica con html y algo de css simple</p>
+                                        <h5>My first page</h5>
+                                        <p>a basic html and CSS page with a very simple design</p>
                                     </div>
                                 </div>
                             </a>
@@ -247,8 +247,8 @@
                                                 </li>
                                             </ul>
                                         </div>
-                                        <h5>Calculadora</h5>
-                                        <p>Una Calculadora simple hecha en Javascript</p>
+                                        <h5>Calculator</h5>
+                                        <p>A very simple Calculator made with HTML, CSS and Javascript</p>
                                     </div>
                                 </div>
                             </a>
@@ -270,8 +270,8 @@
                                                 </li>
                                             </ul>
                                         </div>
-                                        <h5>Juego Preguntas y respuestas</h5>
-                                        <p>hecho en html y css con Javascript</p>
+                                        <h5>Quiz game</h5>
+                                        <p>Made with HTML, CSS and Javascript, still have to fix it</p>
                                     </div>
                                 </div>
                             </a>
@@ -354,7 +354,7 @@
         <footer id="footer">
             <div class="container">
                 <div class="row">
-                    <h4>Redes - Contacto</h4>
+                    <h4>Contact</h4>
                     <div class="col-sm">
                         <div class="contact-box">
                             <div class="icontitle">
