20/9 changed page to English

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="titles-wrap">
                     <h1>I'm <span>Agustin</span></h1>
                     <h2><span class="txt-rotate"></span></h2>
-                    <p>And this is my web page, here you can find information about me and you can also take a look at some projects i've made with more incoming.</p>
+                    <p>Here you can find information about me and you can also take a look at some projects i've made with more in progress.</p>
                     <div class="contact">
                         <div>
                             <a href="https://api.whatsapp.com/send/?phone=2252488432" class="btn" target="_blank">Whatsapp</a>
@@ -154,7 +154,7 @@
                 <div class="row">
                     <div class="col-lg-10">
                         <div class="sec-title">
-                            <h2>Sobre mi</h2>
+                            <h2>About me</h2>
                         </div>
                     </div>
                 </div>
@@ -166,7 +166,7 @@
                             <div class="icontitle">
                                 <i class="mdi mdi-information mdi-48px"></i>
                                 <div class="title">
-                                    <p>Actualmente tengo 21 años y vivo en San Clemente del Tuyú, partido de la costa en Buenos Aires.<br>Soy estudiante de la Universidad Atlantida Argentina en la sede de Mar de Ajó.<br>Actualmente estoy en busca de mi primer empleo como desarrollador web.</p>
+                                    <p>I'm 21 years old and i live in San Clemente del Tuyú, Buenos Aires Argentina.<br>I'm doing a Computer Science degree at the Atlantida Argentina University located in Mar de Ajó. I'm also in search of my first job as a Software Developer.</p>
                                 </div>
                             </div>
                         </div>
@@ -177,7 +177,7 @@
                             <div class="icontitle">
                                 <i class="mdi mdi-book-open-variant mdi-48px"></i>
                                 <div class="title">
-                                    <p>Comence a estudiar por mi cuenta HTML 5, CSS 3 y Javascript por la plataforma Udemy, tambien realice cursos de React y NodeJS adenas de Oracle SQL y aprendi los fundamentos basicos de programacion en la Universidad ademas del Lenguaje C.</p>
+                                    <p>I began studying by myself, taking some courses of HTML 5, CSS 3 and Javascript from the UDEMY platform, i also took React, NodeJS and Oracle SQL courses and learnt the basics of programming at University in addition to C language</p>
                                 </div>
                             </div>
                         </div>
@@ -187,7 +187,7 @@
                             <div class="icontitle">
                                 <i class="mdi mdi-web mdi-48px"></i>
                                 <div class="title">
-                                    <p>Aprobe el First Certificate in English afiliado a la Universidad de Cambridge, por lo cual puedo comunicarme en ingles y hablar fluidamente, en mi tiempo libre juego videojuegos y/o escucho musica, o tambien suelo crear projectos de diseño web.</p>
+                                    <p>I passed the B2 First exam(First Certificate in English) which shows that i can communicate in English fluently, in my free time i play videogames while listening to music, or sometimes i decide to make some web design projects.</p>
                                 </div>
                             </div>
                         </div>
@@ -225,7 +225,7 @@
                                             </ul>
                                         </div>
                                         <h5>My first page</h5>
-                                        <p>a basic html and CSS page with a very simple design</p>
+                                        <p>A basic html and CSS page with a very<br>simple design</p>
                                     </div>
                                 </div>
                             </a>
@@ -248,7 +248,7 @@
                                             </ul>
                                         </div>
                                         <h5>Calculator</h5>
-                                        <p>A very simple Calculator made with HTML, CSS and Javascript</p>
+                                        <p>A very simple Calculator made with HTML,<br>CSS and Javascript</p>
                                     </div>
                                 </div>
                             </a>
@@ -271,7 +271,7 @@
                                             </ul>
                                         </div>
                                         <h5>Quiz game</h5>
-                                        <p>Made with HTML, CSS and Javascript, still have to fix it</p>
+                                        <p>Made with HTML, CSS and Javascript,<br>still have to fix it</p>
                                     </div>
                                 </div>
                             </a>
