--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 
                     <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                         <div class="work-box">
-                            <a href="images/nature4.jpg" class="popup-image">
+                            <a href="../Paginas/proyecto1/index.html" class="popup-image">
                                 <img src="images/nature4.jpg" alt="Work Image 4" class="work-img img-fluid">
                                 <div class="work-overlay">
                                     <div class="work-caption text-white text-center">
