--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                                                 </li>
                                             </ul>
                                         </div>
-                                        <h5>Drum Kitt</h5>
+                                        <h5>Drum Kit</h5>
                                         <p>...</p>
                                     </div>
                                 </div>
