--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                                                 </li>
                                             </ul>
                                         </div>
-                                        <h5>Quiz game</h5>
+                                        <h5>Quiz gamee</h5>
                                         <p>Made with HTML, CSS and Javascript,<br>still have to fix it</p>
                                     </div>
                                 </div>
