--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                                                 </li>
                                             </ul>
                                         </div>
-                                        <h5>Quiz gamee</h5>
+                                        <h5>Quiz game</h5>
                                         <p>Made with HTML, CSS and Javascript,<br>still have to fix it</p>
                                     </div>
                                 </div>
@@ -280,6 +280,7 @@
 
                     <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                         <div class="work-box">
+                            <link href="https://elpassio.github.io/proyecto1/"></link>
                             <a href="https://elpassio.github.io/proyecto1/" class="popup-image">
                                 <img src="images/nature4.jpg" alt="Work Image 4" class="work-img img-fluid">
                                 <div class="work-overlay">
