--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                                                 </li>
                                             </ul>
                                         </div>
-                                        <h5>Drum Kit</h5>
+                                        <h5>Drum Kittttttt</h5>
                                         <p>...</p>
                                     </div>
                                 </div>
