--- a/index.html
+++ b/index.html
@@ -280,7 +280,6 @@
 
                     <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                         <div class="work-box">
-                            <link href="https://elpassio.github.io/proyecto1/"></link>
                             <a href="https://elpassio.github.io/proyecto1/" class="popup-image">
                                 <img src="images/nature4.jpg" alt="Work Image 4" class="work-img img-fluid">
                                 <div class="work-overlay">
@@ -294,7 +293,7 @@
                                                 </li>
                                             </ul>
                                         </div>
-                                        <h5>Drum Kittttttt</h5>
+                                        <h5>Drum Kit</h5>
                                         <p>...</p>
                                     </div>
                                 </div>
