quite numeros de services y actualice proyectos

--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
                             <div class="icontitle">
                                 <i class="mdi mdi-language-html5 mdi-48px"></i>
                                 <div class="title">
-                                    <span>01</span>
                                     <h4>HTML 5</h4>
                                 </div>
                             </div>
@@ -55,7 +54,6 @@
                             <div class="icontitle">
                             <i class="mdi mdi-language-css3 mdi-48px"></i>
                                 <div class="title">
-                                    <span>02</span>
                                     <h4>CSS 3</h4>
                                 </div>
                             </div>
@@ -67,7 +65,6 @@
                             <div class="icontitle">
                             <i class="mdi mdi-language-javascript mdi-48px"></i>
                                 <div class="title">
-                                    <span>03</span>
                                     <h4>Javascript</h4>
                                 </div>
                             </div>
@@ -79,7 +76,6 @@
                             <div class="icontitle">
                             <i class="mdi mdi-server mdi-48px"></i>
                                 <div class="title">
-                                    <span>04</span>
                                     <h4>SQL</h4>
                                 </div>
                             </div>
@@ -91,7 +87,6 @@
                             <div class="icontitle">
                             <i class="mdi mdi-react mdi-48px"></i>
                                 <div class="title">
-                                    <span>05</span>
                                     <h4>React</h4>
                                 </div>
                             </div>
@@ -103,7 +98,6 @@
                             <div class="icontitle">
                             <i class="mdi mdi-nodejs mdi-48px"></i>
                                 <div class="title">
-                                    <span>06</span>
                                     <h4>NodeJS</h4>
                                 </div>
                             </div>
@@ -115,7 +109,6 @@
                             <div class="icontitle">
                             <i class="mdi mdi-git mdi-48px"></i>
                                 <div class="title">
-                                    <span>07</span>
                                     <h4>Git</h4>
                                 </div>
                             </div>
@@ -127,7 +120,6 @@
                             <div class="icontitle">
                             <i class="mdi mdi-github mdi-48px"></i>
                                 <div class="title">
-                                    <span>08</span>
                                     <h4>GitHub</h4>
                                 </div>
                             </div>
@@ -139,7 +131,6 @@
                             <div class="icontitle">
                             <i class="mdi mdi-language-c mdi-48px"></i>
                                 <div class="title">
-                                    <span>09</span>
                                     <h4>C Language</h4>
                                 </div>
                             </div>
@@ -211,7 +202,7 @@
                 <div class="row projects-wrapper">
                     <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                         <div class="work-box">
-                            <a href="../Paginas/pagina/prueba.html" target="_blank" class="popup-image">
+                            <a href="https://elpassio.github.io/Weather-API/" target="_blank" class="popup-image">
                                 <img src="images/nature1.jpg" alt="Work Image 1" class="work-img img-fluid">
                                 <div class="work-overlay">
                                     <div class="work-caption text-white text-center">
@@ -224,8 +215,8 @@
                                                 </li>
                                             </ul>
                                         </div>
-                                        <h5>My first page</h5>
-                                        <p>A basic html and CSS page with a very<br>simple design</p>
+                                        <h5>Weather API</h5>
+                                        <p>Here you can see the current weather in an<br>area specifying country and Postal Code</p>
                                     </div>
                                 </div>
                             </a>
