cambios en imagenes y traduccion es/en

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
         <link rel="stylesheet" href="css/style.css" type="text/css" />
     </head>
-
     <body>
+        <div class="language-toggle" id="language-toggle">English</div>
         <section class="home" id="home">
             <div class="titles">
                 <div class="titles-wrap">
@@ -157,7 +157,7 @@
                             <div class="icontitle">
                                 <i class="mdi mdi-information mdi-48px"></i>
                                 <div class="title">
-                                    <p>I'm 21 years old and i live in San Clemente del Tuyú, Buenos Aires Argentina.<br>I'm doing a Computer Science degree at the Atlantida Argentina University located in Mar de Ajó. I'm also in search of my first job as a Software Developer.</p>
+                                    <p id="about-1" class="about-text">I'm 22 years old and i live in San Clemente del Tuyú, Buenos Aires Argentina.<br>I'm doing a Computer Science degree at the Atlantida Argentina University located in Mar de Ajó. I'm also in search of my first job as a Software Developer.</p>
                                 </div>
                             </div>
                         </div>
@@ -168,7 +168,7 @@
                             <div class="icontitle">
                                 <i class="mdi mdi-book-open-variant mdi-48px"></i>
                                 <div class="title">
-                                    <p>I began studying by myself, taking some courses of HTML 5, CSS 3 and Javascript from the UDEMY platform, i also took React, NodeJS and Oracle SQL courses and learnt the basics of programming at University in addition to C language</p>
+                                    <p id="about-2" class="about-text">I began studying by myself, taking some courses of HTML 5, CSS 3 and Javascript from the UDEMY platform, i also took React, NodeJS and Oracle SQL courses and learnt the basics of programming at University in addition to C language</p>
                                 </div>
                             </div>
                         </div>
@@ -178,7 +178,7 @@
                             <div class="icontitle">
                                 <i class="mdi mdi-web mdi-48px"></i>
                                 <div class="title">
-                                    <p>I passed the B2 First exam(First Certificate in English) which shows that i can communicate in English fluently, in my free time i play videogames while listening to music, or sometimes i decide to make some web design projects.</p>
+                                    <p id="about-3" class="about-text">I passed the B2 First exam(First Certificate in English) which shows that i can communicate in English fluently, in my free time i play videogames while listening to music, or sometimes i decide to make some web design projects.</p>
                                 </div>
                             </div>
                         </div>
@@ -203,7 +203,7 @@
                     <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                         <div class="work-box">
                             <a href="https://elpassio.github.io/Weather-API/" target="_blank" class="popup-image">
-                                <img src="images/nature1.jpg" alt="Work Image 1" class="work-img img-fluid">
+                                <img src="images/weather.jpg" alt="Work Image 1" class="work-img img-fluid">
                                 <div class="work-overlay">
                                     <div class="work-caption text-white text-center">
                                         <div class="overlay-icon-holder">
@@ -225,8 +225,8 @@
 
                     <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                         <div class="work-box">
-                            <a href="../Paginas/Javascript/index.html" target="_blank" class="popup-image">
-                                <img src="images/nature2.jpg" alt="Work Image 2" class="work-img img-fluid">
+                            <a href="https://elpassio.github.io/Pagina-API-Operaciones/" target="_blank" class="popup-image">
+                                <img src="images/operac.png" alt="Work Image 2" class="work-img img-fluid">
                                 <div class="work-overlay">
                                     <div class="work-caption text-white text-center">
                                         <div class="overlay-icon-holder">
@@ -238,8 +238,8 @@
                                                 </li>
                                             </ul>
                                         </div>
-                                        <h5>Calculator</h5>
-                                        <p>A very simple Calculator made with HTML,<br>CSS and Javascript</p>
+                                        <h5>API Consumer and Provider</h5>
+                                        <p>A calculator-like front that sends two numbers to <br>my Provider API and returns the result<br>of the operation<br>(Response time can be long)</p>
                                     </div>
                                 </div>
                             </a>
@@ -249,7 +249,7 @@
                     <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                         <div class="work-box">
                             <a href="../Paginas/quiz/index.html" class="popup-image">
-                                <img src="images/nature3.jpg" alt="Work Image 3" class="work-img img-fluid">
+                                <img src="images/soon.jpg" alt="Work Image 3" class="work-img img-fluid">
                                 <div class="work-overlay">
                                     <div class="work-caption text-white text-center">
                                         <div class="overlay-icon-holder">
@@ -261,8 +261,8 @@
                                                 </li>
                                             </ul>
                                         </div>
-                                        <h5>Quiz game</h5>
-                                        <p>Made with HTML, CSS and Javascript,<br>still have to fix it</p>
+                                        <h5>Coming Soon</h5>
+                                        <p>...</p>
                                     </div>
                                 </div>
                             </a>
@@ -272,7 +272,7 @@
                     <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                         <div class="work-box">
                             <a href="https://elpassio.github.io/proyecto1/" class="popup-image">
-                                <img src="images/nature4.jpg" alt="Work Image 4" class="work-img img-fluid">
+                                <img src="images/soon.jpg" alt="Work Image 4" class="work-img img-fluid">
                                 <div class="work-overlay">
                                     <div class="work-caption text-white text-center">
                                         <div class="overlay-icon-holder">
@@ -284,7 +284,7 @@
                                                 </li>
                                             </ul>
                                         </div>
-                                        <h5>Drum Kitt</h5>
+                                        <h5>Coming Soon</h5>
                                         <p>...</p>
                                     </div>
                                 </div>
@@ -295,7 +295,7 @@
                     <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                         <div class="work-box">
                             <a href="images/nature5.jpg" class="popup-image">
-                                <img src="images/nature5.jpg" alt="Work Image 5" class="work-img img-fluid">
+                                <img src="images/soon.jpg" alt="Work Image 5" class="work-img img-fluid">
                                 <div class="work-overlay">
                                     <div class="work-caption text-white text-center">
                                         <div class="overlay-icon-holder">
@@ -318,7 +318,7 @@
                     <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                         <div class="work-box">
                             <a href="images/nature6.jpg" class="popup-image">
-                                <img src="images/nature6.jpg" alt="Work Image 6" class="work-img img-fluid">
+                                <img src="images/soon.jpg" alt="Work Image 6" class="work-img img-fluid">
                                 <div class="work-overlay">
                                     <div class="work-caption text-white text-center">
                                         <div class="overlay-icon-holder">
