solucionado boton lang

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div class="language-toggle">
-            <button id="languageButton" onclick="toggleLanguage()">
+            <button id="languageButton">
             <img id="languageFlag" src="images/en.png" alt="Language Flag">
         </button>
         </div>
