--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <link rel="stylesheet" href="css/style.css" type="text/css" />
     </head>
     <body>
-        <div class="language-toggle">
-            <button id="languageButton">
-            <img id="languageFlag" src="images/en.png" alt="Language Flag">
-        </button>
-        </div>
         <section class="home" id="home">
+            <div class="language-toggle">
+                <button id="languageButton">
+                <img id="languageFlag" src="images/en.png" alt="Language Flag">
+            </button>
+            </div>
             <div class="titles">
                 <div class="titles-wrap">
                     <h1>I'm <span>Agustin</span></h1>
@@ -250,8 +250,8 @@
 
                     <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                         <div class="work-box">
-                            <a href="../Paginas/quiz/index.html" class="popup-image">
-                                <img src="images/soon.jpg" alt="Work Image 3" class="work-img img-fluid">
+                            <a href="https://live-chat-79xj.onrender.com" class="popup-image">
+                                <img src="images/livechat.png" alt="Work Image 3" class="work-img img-fluid">
                                 <div class="work-overlay">
                                     <div class="work-caption text-white text-center">
                                         <div class="overlay-icon-holder">
@@ -263,8 +263,8 @@
                                                 </li>
                                             </ul>
                                         </div>
-                                        <h5>Coming Soon</h5>
-                                        <p>...</p>
+                                        <h5>Live Chat(In progress)</h5>
+                                        <p>A simple live chat made with NodeJS, socket.io and SQL</p>
                                     </div>
                                 </div>
                             </a>
