added warning message live chat

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                                             </ul>
                                         </div>
                                         <h5>Live Chat(In progress)</h5>
-                                        <p>A simple live chat made with NodeJS, socket.io and SQL</p>
+                                        <p>A simple live chat made with NodeJS, socket.io and SQL(deployed on a free hosting service, may take a while to load)</p>
                                     </div>
                                 </div>
                             </a>
